flower 1 and 2 done

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "jspm": {
     "dependencies": {
+      "jquery": "github:components/jquery@^2.1.4",
       "materialize": "npm:materialize@^1.0.0"
     },
     "devDependencies": {
